--- a/src/components/pages/main/styles.css
+++ b/src/components/pages/main/styles.css
@@ -55,4 +55,7 @@ html {
 	.name {
 		display: none;
 	}
+	.title {
+		display: none;
+	}
 }
